fix: contrast issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -34,7 +34,7 @@ a {
 
 input::placeholder {
   color: rgba(20 83 45);
-  opacity: 0.7;
+  opacity: 0.8;
   line-height: 0%;
 }
 
